manifests/cr/virtual_service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-http-crud-service
spec:
  gateways:
  - ext-host-gwy
  hosts:
    - example.otushomework
  http:
    - match:
        - authority:
            exact: example.otushomework
      route:
        - destination:
            host: simple-http-crud-service
            subset: v1
          weight: 50
        - destination:
            host: simple-http-crud-service
            subset: v2
          weight: 50
